syntax = "proto3";

option go_package = "golang/post;post";
package Post;

message PostElement {
    optional string text = 1;
    optional bytes photo = 2;
    optional string photo_title = 3;
    bool isText = 4;
}

message Post {
    repeated PostElement elements = 3;
}

message CreatePostRequest {
    string token = 1;
    Post post = 4;
}

message GetPostRequest {
    int32 id = 1;
}

message PostResponseElement {
    optional string text = 1;
    optional string photo_url = 2;
    optional string photo_title = 3;
    bool is_text = 4;
}

message PostResponse {
    bool success = 1;
    string error = 2;
    repeated PostResponseElement elements = 3;
}

message DefaultResponse {
    bool success = 1;
    string error = 2;
    int32 post_id = 3;
}

message GetFileRequest {
    string path = 1;
}

message GetFileResponse {
    bool success = 1;
    string error = 2;
    bytes file = 3;
}

service Posting {
    rpc CreatePost(CreatePostRequest) returns (DefaultResponse) {}
    rpc GetPost(GetPostRequest) returns (PostResponse) {}
    rpc GetFile(GetFileRequest) returns (GetFileResponse) {}
}
